many Romanian and Indian things

--- a/localisation/PB_Maratha_l_english.yml
+++ b/localisation/PB_Maratha_l_english.yml
@@ -12,6 +12,16 @@ PB_MAR_INC_desc:0 "§GAs we open the first Pan-Indian Congress meeting, we shoul
 MAR_conscript_mercenaries:0 "Mercenary-Based Army"
 PB_MAR_industrial_question:0 "Scattered Industrial Focus"
 PB_MAR_industrial_question_desc:0 "Under the young Scindia ruler, the court and the group of 8, which functions like an advisory organ for the king, have often had contrast in their ambitions regarding industrialization. While no one soul in the court is against industrialization, the inefficiency of the central government has made it really hard to consistently focus on a single sector or branch to industrialize in Indian society. From the shores of Orissa to the deserts of Punjab, industrialization has been a mess and is spread across the nation, leading to no real center of power in terms of industrial might. The underhand tactics of the local elite really work against national interests, it seems."
+PB_IRP_PILM:0 "The PILM Issue"
+PB_IRP_PILM_desc:0 "The PILM (Pan-Indian Liberation Militia) has been the long hand of the violent branch of the PIC. Under the leadership of the notoriously Jacobin Bose, the PILM has been on a terror campaign against the Maratha/Scinia monarchy since the 1910s, causing country-wide chaos in organized raids on villages and depots. Their campaigning, however, should now come to end, as the monarchy is not our problem any longer! While the PIC tries its best to end this reign of terror, Bose casually enjoys the anarchy."
+PB_IRP_PILM_2:0 "PILM Shock Troop Tactics"
+PB_IRP_PILM_2_desc:0 "The PILM (Pan-Indian Liberation Militia) has been our long arm in the war against the monarchy under the leadership of Subhas Chandra Bose. With the current conflict against the monarchy, the PILM has been converted into effective shocktroops and guerilla fighters, ensuring chaos behind enemy lines. PILM techniques regarding the consumption of supply and using nature for food and medicine has proven to be rather usefull in this conflict, lowering their supply cost and, with the implementation of their techniques, that of the entire Indian liberation army."
+PB_HYD_airport_construction:0 "Hyderabad Aero Club"
+PB_HYD_airport_construction_desc:0 "The HSAC is an organization/club founded in Hyderabad. The club was founded in 1931 with the sudden mass-import of old British fighters and German recreational aircraft. Using the imported fighters and aircraft, the club often hostes air shows in India, which caught the eye of the 7th Nizam, Mir Osman Ali Khan. With the support of the Nizam, the club has grown exponentially, including many members of the Hyderabad elite."
+PB_HYD_agricultural_expense:0 "Great Agricultural Research"
+PB_HYD_agricultural_expense_desc:0 "Since 1918, Hyderabad has seen a great influx of creative and amazing agricultural innovation, helping the nation to expand its agricultural yield from the main state of Hyderabad. This expanse of innovation coincided with the commencement of the Main Experimental Farm of 1918 in Parbhani, which helped the region of Marathwada with the blessings of the Nizam and agricultural education."
+PB_MAR_lower_taxation:0 "Lowered Agricultural Taxes"
+
 
 PB_MAR_PIC_aggression:0 "Pan-Indian Congress Conflict"
 PB_MAR_PIC_aggression_desc:0 "As the days pass by, the many people of the Marathan Confederacy feel the tension that is brewing among them. Political unrest has manifested itself in our way of life and the Pan-Indian Congress are to blame for that, as their violent guerilla war against the Scindia dynasty continues to lead to more and more damage and death. Their militant wing under the Bose dynasty has been operating in Gwalior and Bombay for years now, while their more political branches are winning the hearts of the people in this war of terror against the reigning monarchy. \n\n§RWe cannot afford compromise.§!"
@@ -21,6 +31,10 @@ MAR_RANDOM_EVENT:0 "§RThe PILM will have prepared an attack against our governm
 MAR_COLLAPSE_TOOLTIP:0 "§YWith the breaking down of negotiations in Delhi and the growing unrest among our kings, the Confederacy is in civil conflict and surrounded on all sides by enemies of the state. Without any hope, the king retreats to Gwalior, absolving the confederacy in the process.§!"
 MAR_COLLAPSE_2_TOOLTIP:0 "§YWith the breaking down of negotiations in Delhi and the growing unrest among our kings, the Confederacy is in civil conflict and surrounded on all sides by enemies of the state. However, while hope is limited, the emperor continues his reign as emperor of the confederacy.§!"
 MAR_COLLAPSE_3_TOOLTIP:0 "§YWith the breaking down of negotiations in Delhi and the growing unrest among the kings of the emperor, the republic stands up and overthrows this old-fashioned system of monarchs, establishing an all-Indian republic!§!"
+DELHI_NEG:0 "§GThe Delhi Negotiations will be planned to happen in about a month§!"
+MAR_DELHI_CON:0 "§YThe Delhi Meeting has be opened by the Emperor§!"
+
+IRP_DESC:0 "Born in 1876 Karachi, a former student from Bombay and having lived 3 years of his young live in Europe, Muhammad Ali Jinnah has always had an interest in politics. From a rich merchant background, Jinnah found his inspiration in European liberalism and culture, namely British culture. A fan of cricket and Western-style clothing (he owned 200 suits in his early life), Jinnah returned to India at the age of 20, practicing law in Bombay. However, while looked down upon by the judicial system there for being muslim, Jinnah often had the last word and became known as a natural leader. He joined the growing Pan-Indian Congress in just a matter of days after its foundation and rose up the ranks, becoming a major spokesperson for Indian muslims and promoting secular Indian nationalism, believing that all people of India, no matter which caste or religion they belonged to, had the right to democratic and liberal practices such as elections. His beliefs had often conflicted with the local governor of Bombay and Jinnah is thus no stranger to moving from city to city. His current residence of Delhi has been rather pleasant, as he's been able to effectively undermine the power of the emperor from there, all while sleeping in his cosy apartment."
 
 
 MAR_GWALIOR_ds:0 "Gwalior Empire"
@@ -43,7 +57,21 @@ MAR_ss_party:0 "ABK/PIC"
 MAR_jc_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
 MAR_jc_party:0 "ABK/PIC"
 MAR_an_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
-MAR_an_party:0 "ABK/PIC"
+MAR_an_party:0 "ABK/PIC"`
+
+IRP_lb_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
+IRP_lb_party:0 "ABK/PIC"
+IRP_ss_party_long:0 "Akhil Bhaarateey Kaangres/Pan-Indian Congress"
+IRP_ss_party:0 "ABK/PIC"
+IRP_cn_party_long:0 "All-India Muslim League"
+IRP_cn_party:0 "A-IML"
+IRP_rc_party_long:0 "Rashtriya Swayamsevak Sangh"
+IRP_rc_party:0 "RSS"
+IRP_jc_party_long:0 "All India Forward Bloc"
+IRP_jc_party:0 "AIFB"
+IRP_ni_party_long:0 "Greater India Society"
+IRP_ni_party:0 "GIS"
+
 
 MAR_Delhi_Negotiations:0 "Open the Delhi Meeting"
 MAR_Lower_Farmer_Taxation:0 "Lower Farmer Taxation"
@@ -75,3 +103,27 @@ mar.6.t:0 "Military Command breaks away from the Chhatrapati"
 mar.6.d:0 "After our recent decision to end the confederacy entirely and retreat to Gwalior, several members of the military have started to question the legitimacy of the child emperor and his capabilities in leading the nation through civil conflict. A group of these traitors, under the reformist General Maharaja Ganga Singh, have broken ties with the Gwalior army and declared that they were the legitimate government of a new confederacy. This Free Officers Movement has spread across all ranks, promoting the diversity of the military instead of highlighting Gwalior tactics in battle. Their treachery will not be forgotten by the emperor!"
 mar.6.a:0 "Sad days come for India"
 mar.6.b:0 "Singh has the right idea!"
+mar.7.t:0 "Court against infrastructure"
+mar.7.d:0 "The local decision to build a modern railway system has clearly angered several nobles of the court, as they have gathered together against the expansion of infrastructure. Their anti-modernisation group has approached the emperor, demanding and end to the construction of the railroad, deeming it a western, and thus not-Marathan, product that would tear the nation apart. Their demands are now examined by the emperor, who is known to have a favourable view on railroads and trains."
+mar.7.a:0 "The court knows best"
+mar.7.b:0 "Railways unite the people, they don't divide!"
+mar.8.t:0 "Portuguese merchants threaten domestic trade balance"
+mar.8.d:0 "The trading board of western India has been primarily been focussed on export for decades now, formerly trading with the empires of the Indian Ocean in Africa and Arabia in exchange for the wealth that India has to offer. However, with the recent arival of the European Empires in India, such as the Portuguese and Dutch, the trade of the west has started to stagnate, hitting platforms such as European naval projection. Recently, Portuguese merchants and their wealth have started to threaten the local domestic market of Bombay with cheap produce, linked to the industrial might of their nation compared to the mostly agrarian local economy. Local merchants and governors have already proposed import tariffs on European produce, but the crown has yet to answer."
+mar.8.a:0 "Troublesome"
+mar.9.t:0 "PIC reaches towards the emperor"
+mar.9.d:0 "In a rare moment of mutual respect, the PIC has send a formal letter to the emperor of the confederacy, detailing their political aspirations and with a final call for negotiations between the PIC and the emperor. Their call has humbled the emperor and many inside the court seem to belief that negotiating with the PIC could be a great tactical decision in the long run for the confederacy. Only the most conservative forces are still not willing to negotiate with the PIC, regarding them as enemies of the state."
+mar.9.a:0 "We shall meet in Delhi!"
+mar.9.b:0 "We don't negotiate with terrorists!"
+mar.10.t:0 "Opening of the Delhi Meeting"
+mar.10.d:0 "The city of Delhi is rather lively today: merchants and bankers have gathered together with farmers and beggars before the university of Delhi, one of the few universities of the nation. The reason was quite simple: The great emperor, Jivajirao Scindia, was coming to Delhi, specifically to the university, to personally attend the most historical meeting of the decade. Followed by a large chunk of the court and his advisors, the emperor will meet with the Pan-Indian Congress to talk about the future of India. While sceptical voices in the court have pressured the emperor to stay at his palace in Gwalior, Jivajirao was quite fond of the idea of going to Delhi and has thus arrived today. He was met with the main leadership of the PIC: Muhammad Ali Jinnah, Nehru Jawaharlal and Mohandas Gandhi. Nehru and Muhammad were the representatives of the political branch of the PIC, symbolising the unity of muslim and hindu culture in the nation, while Gandhi is known as the spirtual leader of the movement, representing the religious unity of Islam and Hinduism. The emperor has already expressed fondness towards these 3 men."
+mar.10.a:0 "Let's talk"
+mar.11.t:0 "Nehru's Speech"
+mar.11.d:0 "With the formal opening of the meeting by the emperor, the leader of the Hindu branch, Nehru Jawaharlal, opened his part of the meeting with a long and interesting speech, describing the historical significance of India on the worldstage, presumably as a sign of acceptance towards the emperor. In his speech, Nehru also highlighted the national importance of unity for India, as India is a collective of different cultures, religions and ethnicities that could easily break apart if it does not accomodate its minorities. While this part of the speech visually made the court uncomfortable, the emperor seemingly did not mind, though also wasn't a vocal proponent of minority protection. Ending his speech, Nehru quickly went through the political goals of the PIC once more. Thunderous applaus filled the room afterwards, though mostly coming from the delegates of the Pan-Indian Congress."
+mar.11.a:0 "Okay"
+mar.12.t:0 "Lower Agricultural Income Tax"
+mar.12.d:0 "Under the local governments of India, farmers are forced to pay taxation based on their income gained through the sales of agricultural produce. These kind of taxations are both payed to the central and local government, leaving a small amount of cash for the farmer to spend on basic needs, such as clothing and food, something the PIC considers as the basic right of every Indian. Thus, they've demanded an end to the central agricultural tax and a significantly lower local tax. Their arguments have seemingly convinced the emperor, but his court, especially the local governors of Delhi and Bombay, seem to be highly critical of this proposal."
+mar.12.a:0 "A farmer should be able to feed his family!"
+mar.12.b:0 "Taxation is needed for a state to run!"
+mar.13.t:0 "PIC disagrees, but moves on"
+mar.13.d:0 "While the refusal of the emperor to abolish central agricultural taxation and lower local taxation has made several elements and representatives of the PIC mad, the partyleadership of Nehru and Jinnah have tried to reason with their own party, clearly wanting the congress to keep going. Thus, the negotiations are not yet lost."
+mar.13.a:0 "That was close..."
