--- a/localisation/PB_Romania_l_english.yml
+++ b/localisation/PB_Romania_l_english.yml
@@ -15,7 +15,21 @@ PB_ROM_far_right:0 "Sneaking Power of the Legionaries"
 PB_ROM_far_right_desc:0 "Since the Romanian loss of the Great War, radical ideas have been spread from the urban centre of Bucharest to the agrarian corners of the Romanian nation. The most popular ideas have been the once that are followed by the Iron Guard or Legionary Movement, a group of neo-imperialist radicals led by Corneliu Codreanu believing in the inherint values of being Romanian, agriculture and the orthodox monarchy. Their ideas have been on the rise ever since their split from the LANC and many fear the victory of the party in the upcoming 1933 election, as many men have become a loyal member to the Romanian death fetishists."
 
 ROM_PB_Codreanu_HOG:0 "Corneliu Zelea Codreanu"
+ROM_PB_Gheorghe_HOG:0 "Gheorghe Tătărescu"
+ROM_PB_Ion_HOG:0 "Ion Antonescu"
+ROM_PB_Sima_HOG:0 "Horia Sima"
+ROM_PB_Sima_IM:0 "Horia Sima"
+ROM_PB_Goga_HOG:0 "Octavian Goga"
 
+ROM_PB_Ion_IM:0 "Ion Inculet"
+ROM_PB_Ion_2_IM:0 "Ion Mihalache"
+ROM_PB_Gheorghe_IM:0 "Gheorghe Mironescu"
+
+
+
+PB_Closet_Despotist:0 "Closet Despotist"
+PB_Human_Cipher:0 "Human Cipher"
+PB_Wartime_Dictator:0 "Wartime Dictator"
   ##########################
   # FOCUS
   ##########################
@@ -28,7 +42,25 @@ ROM_the_new_regent:0 "Cult of Spirtualism"
 ROM_the_succesor:0 "Appoint a Possible Succesor"
 ROM_octavian_goga:0 "The Hard Poet"
 ROM_horia_sima:0 "Codreanu's Left Hand"
-
+ROM_establish_diplomatic_ties_with_france:0 "Follow Our Big Sister"
+ROM_hunt_for_corruption:0 "Moral Revolution"
+ROM_reinforce_the_churchs_power:0 "Orthodox Nationalism"
+ROM_expand_the_legionarre_militia:0 "Expand the Party Militia"
+ROM_revolutionize_national_identity:0 "Exile Goga's Friends"
+ROM_consolidate_the_fascist_coalition:0 "The Bucharest Congress"
+ROM_mid_night_dissapearances:0 "Nightly Dissapearances"
+ROM_convenient_deaths:0 "The Road to Greater Romania"
+ROM_praise_death_for_the_state:0 "Praise Sacrifice"
+ROM_decrease_minimum_conscription_age:0 "Little Soldiers for Big Romania"
+ROM_align_with_the_monarchy:0 "Align with the Monarchy"
+ROM_exile_the_legionary_hardline:0 "Surpess the Legionary Hardline"
+ROM_return_of_the_constitution:0 "Return of the Royal Constitution"
+ROM_soften_semetic_laws:0 "Outlaw Pogroms"
+ROM_soften_semetic_laws_desc:0 "While Goga and his cabinet do not care for the daily struggles of the children of Israel, the pogroms of the legionary remnants have become extremely violent under the rule of Horia Sima and his band of misfits. Their anarchy has not only disrupted some of our greatest economic assets, but pose a threat to every Romanian citizen in Bucharest and the region surrounding the city. Thus, Goga has to crackdown."
+ROM_rebrand_the_party:0 "National Renaissance Front"
+ROM_rebrand_the_party_desc:0 "With the final tasks complete, Goga is ready to rebrand the Legionary coalition to a more fitting name: The National Renaissance Front. This Front will work to keep Romania in balance and realise the Greater Romanian ambitions."
+ROM_exile_the_legionary_hardline_desc:0 "The Legionaries are not unlike the Jacobins for Goga: Both are radical extremists threatening the balance of Romanian society by glorifying morally disgusting ideals, such as violence and death worship. While Goga's nationalism is said to know no bounds, in reality, even Octavian Goga does not go as far as his legionary allies. Thus, to keep Romania safe, Goga will surpress the new hardline."
+ROM_align_with_the_monarchy_desc:0 "The royalists are a great ally in the eyes of Goga: their ideals of conservative traditionalism and status quo perfectly fits with Goga's traditionalist and reactionary nationalism. They also enjoy a great amount of popularity among the population and could help Goga's reorganization of the party."
   ##########################
   # PARTIES
   ##########################
@@ -50,6 +82,7 @@ ROM_ss_party:0 "PSDR"
 ROM_jc_party_long:0 "-"
 ROM_jc_party:0 "-"
 
+legionary_coalition:0 "§GLegionary Coalition§!"
   ##########################
   # EVENTS
   ##########################
