Focus Work and Other Shite

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1626,21 +1626,21 @@
  NBT_cn_ADJ:0 "Australo-Dutch"
  NBT_an_ADJ:0 "Australo-Dutch"
 
- VIC_ni:0 "Victoria"
- VIC_ni_DEF:0 "Victoria"
- VIC_ds:0 "Victoria"
- VIC_ds_DEF:0 "Victoria"
- VIC_rc:0 "Victoria"
- VIC_rc_DEF:0 "Victoria"
- VIC_an:0 "Victoria"
- VIC_an_DEF:0 "Victoria"
- VIC_cn:0 "Victoria"
- VIC_cn_DEF:0 "Victoria"
- VIC_lb:0 "Victoria"
- VIC_lb_DEF:0 "Victoria"
- VIC_ss:0 "Victoria"
- VIC_ss_DEF:0 "Victoria"
- VIC_jc:0 "Victoria"
+ VIC_ni:0 "Commonwealth of Victoria"
+ VIC_ni_DEF:0 "Commonwealth of Victoria"
+ VIC_ds:0 "Commonwealth of Victoria"
+ VIC_ds_DEF:0 "Commonwealth of Victoria"
+ VIC_rc:0 "Commonwealth of Victoria"
+ VIC_rc_DEF:0 "Commonwealth of Victoria"
+ VIC_an:0 "Commonwealth of Victoria"
+ VIC_an_DEF:0 "Commonwealth of Victoria"
+ VIC_cn:0 "Commonwealth of Victoria"
+ VIC_cn_DEF:0 "Commonwealth of Victoria"
+ VIC_lb:0 "Commonwealth of Victoria"
+ VIC_lb_DEF:0 "Commonwealth of Victoria"
+ VIC_ss:0 "Commonwealth of Victoria"
+ VIC_ss_DEF:0 "Commonwealth of Victoria"
+ VIC_jc:0 "Commonwealth of Victoria"
  VIC_jc_DEF:0 "Victoria"
  VIC_ni_ADJ:0 "Victorian"
  VIC_rc_ADJ:0 "Victorian"
