Belgian States Bramming

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -852,5 +852,6 @@
  STATE_850:0 "Madras"
  STATE_851:0 "Hughli"
  STATE_852:0 "Sanghli"
- STATE_853:0 "Sikkim" 
+ STATE_853:0 "Sikkim"
  STATE_854:0 "Surate"
+ STATE_855:0 "Corridor de Dunkerque"
