--- a/localisation/PB_Maratha_l_english.yml
+++ b/localisation/PB_Maratha_l_english.yml
@@ -81,6 +81,8 @@ MAR_constitutional_question:0 "Adopt a Liberal Constitution"
 MAR_abolishment_of_the_monarchy:0 "Abolish the Monarchy"
 MAR_victory_of_the_party:0 "Historic Day for India"
 MAR_failure_of_the_delhi_negotiations:0 "The Negotiations Break Down"
+MAR_centralized_republic:0 "Delhi Centralism"
+MAR_new_indian_federation:0 "New Indian Federalism"
 
 mar.1.t:0 "Local leader assassinated by the PILM"
 mar.1.d:0 "According to the story of our quick central messenger, a local lord and acting governor has been killed by radicals, loyal to the Pan-Indian Congress and its militia under Bose. His death has caused local unrest and a new power vacuum over which the regional lords fight to fill in. His assassins were unable to be captured alive, as they both killed themself before the guards could catch them."
