--- a/localisation/PB_Spain_l_english.yml
+++ b/localisation/PB_Spain_l_english.yml
@@ -402,6 +402,18 @@ PB_SPR_visigoths:0 "Archeological Visigothic Programs"
 SPR_FAL_ni:0 "Spain"
 SPR_FAL_ni_DEF:0 "Spanish State"
 
+BSQ_cn_party_long:0 "Comunión Nacionalista Vasca"
+BSQ_cn_party:0 "CNV"
+BSQ_ds_party_long:0 "Euzko Alderdi Letzalea"
+BSQ_ds_party:0 "EAL"
+BSQ_rc_party_long:0 "Eusko Ikaskuntza"
+BSQ_rc_party:0 "EI"
+BSQ_jc_party_long:0 "Eusko Abertzale Ekintza"
+BSQ_jc_party:0 "EAE"
+BSQ_ss_party_long:0 "Eusko Langileen Alkartasuna-Solidaridad de Trabajadores Vascos"
+BSQ_ss_party:0 "ELA-STV"
+
+
 ##########Descriptions for leaders####
 SPR_Mola_Desc:0 "Born on the 9th of July, 1887, on the tropical island of Cuba, Emilio Mola would never know rest in his life. Soon after his birth, the familie split, with the maternal branch joining the revolutionaries and Mola's father serving the Spanish forces. Quickly moving to the Spanish kingdom, Mola enrolled in the §YInfantry Academy of Toledo§! around 1910, serving in the Rif War as a Brigadier-General. Becoming one of Alfonso's favorites, Mola was rewarded with the position of Director-General of Security in 1906, being responsible for the growing Republican issue. However, his career as Director-General was short, as the §YSpanish Civil War of 1910§! would end the reign of Alfonso the 13th. The new Republican government initially wanted Mola executed for his royalist opinion, but with the help of CEDA and Falangist members, Mola became a military governor in §YNavarre§!. There he was able to drum up far-right support and, during the §YMary Coup§! was swiftly able to complete conquer the Basque region for the nationalist government. The death of Sanjurjo would, once again, begin Mola's career as Head of State. His paranoia has become a trademark of the Spanish security and his fear for the fifth column has drove Spain to near-constant purging."
 
