--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -3078,10 +3078,10 @@
 
  ULS_ni:0 "Free Ulster"
  ULS_ni_DEF:0 "Free Ulster"
- ULS_ds:0 "Free Ulster"
- ULS_ds_DEF:0 "Free Ulster"
- ULS_rc:0 "Free Ulster"
- ULS_rc_DEF:0 "Free Ulster"
+ ULS_ds:0 "Imperial Ulster"
+ ULS_ds_DEF:0 "Imperial Ulster"
+ ULS_rc:0 "Imperial Ulster"
+ ULS_rc_DEF:0 "Imperial Ulster"
  ULS_an:0 "Free Ulster"
  ULS_an_DEF:0 "Free Ulster"
  ULS_cn:0 "Free Ulster"
