China work and also baseline Commonwealth slump event

--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -283,6 +283,7 @@
   PB_ENG_Parliament_Compromises:0 "Parliamentary Compromises"
   PB_ENG_Opposition_Enforced_Concessions:0 "Opposition Enforced Concessions"
   PB_ENG_Great_Slump:0 "The Great Slump"
+  PB_ENG_Great_Slump_Commonwealth:0 "The Great Slump"
   PB_ENG_Crippling_Unemployment:0 "Crippling Unemployment"
   PB_ENG_National_Recovery_Act:0 "The National Recovery Act"
   ENG_General_Strike:0 "General Strike"
