--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1301,22 +1301,22 @@
  QGH_cn_ADJ:0 "Hui"
  QGH_an_ADJ:0 "Hui"
 
- SHX_ni:0 "Imperial China"
- SHX_ni_DEF:0 "Imperial China"
- SHX_ds:0 "Imperial China"
- SHX_ds_DEF:0 "Imperial China"
- SHX_rc:0 "Imperial China"
- SHX_rc_DEF:0 "Imperial China"
- SHX_an:0 "Imperial China"
- SHX_an_DEF:0 "Imperial China"
- SHX_cn:0 "Imperial China"
- SHX_cn_DEF:0 "Imperial China"
- SHX_lb:0 "Imperial China"
- SHX_lb_DEF:0 "Imperial China"
- SHX_ss:0 "Imperial China"
- SHX_ss_DEF:0 "Imperial China"
- SHX_jc:0 "Imperial China"
- SHX_jc_DEF:0 "Imperial China"
+ SHX_ni:0 "Shanxi Clique"
+ SHX_ni_DEF:0 "Shanxi Clique"
+ SHX_ds:0 "Shanxi Clique"
+ SHX_ds_DEF:0 "Shanxi Clique"
+ SHX_rc:0 "Shanxi Clique"
+ SHX_rc_DEF:0 "Shanxi Clique"
+ SHX_an:0 "Shanxi Clique"
+ SHX_an_DEF:0 "Shanxi Clique"
+ SHX_cn:0 "Shanxi Clique"
+ SHX_cn_DEF:0 "Shanxi Clique"
+ SHX_lb:0 "Shanxi Clique"
+ SHX_lb_DEF:0 "Shanxi Clique"
+ SHX_ss:0 "Shanxi Clique"
+ SHX_ss_DEF:0 "Shanxi Clique"
+ SHX_jc:0 "Shanxi Clique"
+ SHX_jc_DEF:0 "Shanxi Clique"
  SHX_ni_ADJ:0 "Chinese"
  SHX_rc_ADJ:0 "Chinese"
  SHX_lb_ADJ:0 "Chinese"
@@ -1401,22 +1401,22 @@
  CHC_cn_ADJ:0 "Chinese"
  CHC_an_ADJ:0 "Chinese"
 
- YUN_ni:0 "Yunnan Free State"
- YUN_ni_DEF:0 "Yunnan Free State"
- YUN_ds:0 "Yunnan Free State"
- YUN_ds_DEF:0 "Yunnan Free State"
- YUN_rc:0 "Yunnan Free State"
- YUN_rc_DEF:0 "Yunnan Free State"
- YUN_an:0 "Yunnan Free State"
- YUN_an_DEF:0 "Yunnan Free State"
- YUN_cn:0 "Yunnan Free State"
- YUN_cn_DEF:0 "Yunnan Free State"
- YUN_lb:0 "Yunnan Free State"
- YUN_lb_DEF:0 "Yunnan Free State"
- YUN_ss:0 "Yunnan Free State"
- YUN_ss_DEF:0 "Yunnan Free State"
- YUN_jc:0 "Yunnan Free State"
- YUN_jc_DEF:0 "Yunnan Free State"
+ YUN_ni:0 "Yunnan Clique"
+ YUN_ni_DEF:0 "Yunnan Clique"
+ YUN_ds:0 "Yunnan Clique"
+ YUN_ds_DEF:0 "Yunnan Clique"
+ YUN_rc:0 "Yunnan Clique"
+ YUN_rc_DEF:0 "Yunnan Clique"
+ YUN_an:0 "Yunnan Clique"
+ YUN_an_DEF:0 "Yunnan Clique"
+ YUN_cn:0 "Yunnan Clique"
+ YUN_cn_DEF:0 "Yunnan Clique"
+ YUN_lb:0 "Yunnan Clique"
+ YUN_lb_DEF:0 "Yunnan Clique"
+ YUN_ss:0 "Yunnan Clique"
+ YUN_ss_DEF:0 "Yunnan Clique"
+ YUN_jc:0 "Yunnan Clique"
+ YUN_jc_DEF:0 "Yunnan Clique"
  YUN_ni_ADJ:0 "Chinese"
  YUN_rc_ADJ:0 "Chinese"
  YUN_lb_ADJ:0 "Chinese"
@@ -4393,6 +4393,131 @@ SAN_jc:0 "Sanghli State"
  ARM_ds_ADJ:0 "Armenian"
  ARM_cn_ADJ:0 "Armenian"
  ARM_an_ADJ:0 "Armenian"
+
+ XSM_ni:0 "Ma Family Clique"
+ XSM_ni_DEF:0 "Ma Family Clique"
+ XSM_ds:0 "Ma Family Clique"
+ XSM_ds_DEF:0 "Ma Family Clique"
+ XSM_rc:0 "Ma Family Clique"
+ XSM_rc_DEF:0 "Ma Family Clique"
+ XSM_an:0 "Ma Family Clique"
+ XSM_an_DEF:0 "Ma Family Clique"
+ XSM_cn:0 "Ma Family Clique"
+ XSM_cn_DEF:0 "Ma Family Clique"
+ XSM_lb:0 "Ma Family Clique"
+ XSM_lb_DEF:0 "Ma Family Clique"
+ XSM_ss:0 "Ma Family Clique"
+ XSM_ss_DEF:0 "Ma Family Clique"
+ XSM_jc:0 "Ma Family Clique"
+ XSM_jc_DEF:0 "Ma Family Clique"
+ XSM_ni_ADJ:0 "Hui"
+ XSM_rc_ADJ:0 "Hui"
+ XSM_lb_ADJ:0 "Hui"
+ XSM_ss_ADJ:0 "Hui"
+ XSM_jc_ADJ:0 "Hui"
+ XSM_ds_ADJ:0 "Hui"
+ XSM_cn_ADJ:0 "Hui"
+ XSM_an_ADJ:0 "Hui"
+
+ SHN_ni:0 "Shangdong Clique"
+ SHN_ni_DEF:0 "Shangdong Clique"
+ SHN_ds:0 "Shangdong Clique"
+ SHN_ds_DEF:0 "Shangdong Clique"
+ SHN_rc:0 "Shangdong Clique"
+ SHN_rc_DEF:0 "Shangdong Clique"
+ SHN_an:0 "Shangdong Clique"
+ SHN_an_DEF:0 "Shangdong Clique"
+ SHN_cn:0 "Shangdong Clique"
+ SHN_cn_DEF:0 "Shangdong Clique"
+ SHN_lb:0 "Shangdong Clique"
+ SHN_lb_DEF:0 "Shangdong Clique"
+ SHN_ss:0 "Shangdong Clique"
+ SHN_ss_DEF:0 "Shangdong Clique"
+ SHN_jc:0 "Shangdong Clique"
+ SHN_jc_DEF:0 "Shangdong Clique"
+ SHN_ni_ADJ:0 "Chinese"
+ SHN_rc_ADJ:0 "Chinese"
+ SHN_lb_ADJ:0 "Chinese"
+ SHN_ss_ADJ:0 "Chinese"
+ SHN_jc_ADJ:0 "Chinese"
+ SHN_ds_ADJ:0 "Chinese"
+ SHN_cn_ADJ:0 "Chinese"
+ SHN_an_ADJ:0 "Chinese"
+
+ KUM_ni:0 "Kumul Khanate"
+ KUM_ni_DEF:0 "Kumul Khanate"
+ KUM_ds:0 "Kumul Khanate"
+ KUM_ds_DEF:0 "Kumul Khanate"
+ KUM_rc:0 "Kumul Khanate"
+ KUM_rc_DEF:0 "Kumul Khanate"
+ KUM_an:0 "Kumul Khanate"
+ KUM_an_DEF:0 "Kumul Khanate"
+ KUM_cn:0 "Kumul Khanate"
+ KUM_cn_DEF:0 "Kumul Khanate"
+ KUM_lb:0 "Kumul Khanate"
+ KUM_lb_DEF:0 "Kumul Khanate"
+ KUM_ss:0 "Kumul Khanate"
+ KUM_ss_DEF:0 "Kumul Khanate"
+ KUM_jc:0 "Kumul Khanate"
+ KUM_jc_DEF:0 "Kumul Khanate"
+ KUM_ni_ADJ:0 "Kumul"
+ KUM_rc_ADJ:0 "Kumul"
+ KUM_lb_ADJ:0 "Kumul"
+ KUM_ss_ADJ:0 "Kumul"
+ KUM_jc_ADJ:0 "Kumul"
+ KUM_ds_ADJ:0 "Kumul"
+ KUM_cn_ADJ:0 "Kumul"
+ KUM_an_ADJ:0 "Kumul"
+
+ FUJ_ni:0 "Fujian Clique"
+ FUJ_ni_DEF:0 "Fujian Clique"
+ FUJ_ds:0 "Fujian Clique"
+ FUJ_ds_DEF:0 "Fujian Clique"
+ FUJ_rc:0 "Fujian Clique"
+ FUJ_rc_DEF:0 "Fujian Clique"
+ FUJ_an:0 "Fujian Clique"
+ FUJ_an_DEF:0 "Fujian Clique"
+ FUJ_cn:0 "Fujian Clique"
+ FUJ_cn_DEF:0 "Fujian Clique"
+ FUJ_lb:0 "Fujian Clique"
+ FUJ_lb_DEF:0 "Fujian Clique"
+ FUJ_ss:0 "Fujian Clique"
+ FUJ_ss_DEF:0 "Fujian Clique"
+ FUJ_jc:0 "Fujian Clique"
+ FUJ_jc_DEF:0 "Fujian Clique"
+ FUJ_ni_ADJ:0 "Chinese"
+ FUJ_rc_ADJ:0 "Chinese"
+ FUJ_lb_ADJ:0 "Chinese"
+ FUJ_ss_ADJ:0 "Chinese"
+ FUJ_jc_ADJ:0 "Chinese"
+ FUJ_ds_ADJ:0 "Chinese"
+ FUJ_cn_ADJ:0 "Chinese"
+ FUJ_an_ADJ:0 "Chinese"
+
+ TPG_ni:0 "Taiping Clique"
+ TPG_ni_DEF:0 "Taiping Clique"
+ TPG_ds:0 "Taiping Clique"
+ TPG_ds_DEF:0 "Taiping Clique"
+ TPG_rc:0 "Taiping Clique"
+ TPG_rc_DEF:0 "Taiping Clique"
+ TPG_an:0 "Taiping Clique"
+ TPG_an_DEF:0 "Taiping Clique"
+ TPG_cn:0 "Taiping Clique"
+ TPG_cn_DEF:0 "Taiping Clique"
+ TPG_lb:0 "Taiping Clique"
+ TPG_lb_DEF:0 "Taiping Clique"
+ TPG_ss:0 "Taiping Clique"
+ TPG_ss_DEF:0 "Taiping Clique"
+ TPG_jc:0 "Taiping Clique"
+ TPG_jc_DEF:0 "Taiping Clique"
+ TPG_ni_ADJ:0 "Chinese"
+ TPG_rc_ADJ:0 "Chinese"
+ TPG_lb_ADJ:0 "Chinese"
+ TPG_ss_ADJ:0 "Chinese"
+ TPG_jc_ADJ:0 "Chinese"
+ TPG_ds_ADJ:0 "Chinese"
+ TPG_cn_ADJ:0 "Chinese"
+ TPG_an_ADJ:0 "Chinese"
 
 ###################################
 # TEMPLATE
