--- a/localisation/PB_China_l_english.yml
+++ b/localisation/PB_China_l_english.yml
@@ -174,66 +174,67 @@
   PB_NRA_Kill_the_Rich:0 "The Powerful Will be Brought Low"
   PB_NRA_Revolution_Endurance:0 "The Revolution Shall Endure"
 
-  PB_NRA_Cai_E_Republic:0 "The People's Tutelage"
-  PB_NRA_Form_a_Parliament:0 "Form a Parliament"
-  PB_NRA_Write_Constitution:0 "Constitutional Convention"
-  PB_NRA_Socialist_Question:0 "The Question of the Socialists"
-  PB_NRA_Chinese_Cincinnatus:0 "The Chinese Cincinnatus"
-  PB_NRA_Future_of_the_Loyalists:0 "The Fate of the Loyalists"
-  PB_NRA_No_Socialists_in_Parliament:0 "Ban Trade Unionism"
-  PB_NRA_Socialists_in_Parliament:0 "Enshrine Worker's Rights"
-  PB_NRA_Asian_Democracy:0 "A Beacon of Asian Democracy"
-  PB_NRA_Manchu_Integration:0 "Five Equal Peoples"
-  PB_NRA_Manchu_Oppression:0 "...but Some are More Equal than Others"
-  PB_NRA_Mass_Modernization:0 "Mass Modernization"
-  PB_NRA_Fight_Regionalism:0 "The Fight against Regionalism"
-  PB_NRA_Integrate_the_Provinces:0 "Integrate the Provinces"
-  PB_NRA_United_States:0 "The United States of China"
+  PB_NRA_Constitutional_Convention:0 "Convene the Constitutional Congress"
+  PB_NRA_Trade_Unions:0 "Debate Trade Union Powers"
+  PB_NRA_Establish_Supreme_Court:0 "Formalize Judicial Power"
+  PB_NRA_Centralization_Concerns:0 "Centralization or Decentralization?"
+  PB_NRA_Presidential_Powers:0 "Debate Presidential Powers"
+  PB_NRA_Grand_Marshall_Abdicates:0 "The Chinese Cincinnatus"
+  PB_NRA_Elections:0 "The First Elections"
+  PB_NRA_Unity_Party:0 "The National Unity Party"
+  PB_NRA_Peoples_Party:0 "The People's Democratic Party"
+  PB_NRA_Independent_Party:0 "The Independent Party"
+  PB_NRA_Agrarian_Party:0 "The New Agrarian Party"
 
-  PB_NRA_Li_Shizeng_Republic:0 "The Second Revolution"
-  PB_NRA_Anarchist_Ideas:0 "The Chinese Path to Bakuninism"
-  PB_NRA_Purge_Reactionaries:0 "Purge Reactionaries"
-  PB_NRA_Commune_Democracy:0 "Commune Democracy"
-  PB_NRA_Purge_Army:0 "Purge the National Army"
-  PB_NRA_Revolutionary_Council:0 "Form a Revolutionary Directory"
-  PB_NRA_Revolution_Future:0 "The Course of the Revolution"
-  PB_NRA_Revolution_Future_Anarchists:0 "Li Shizeng's Bakuninists"
-  PB_NRA_Revolution_Future_Market_Socialists:0 "Zhang Ji's Market Socialists"
-  PB_NRA_Revolution_Future_Authsocs:0 "Li Lisan's Vanguardists"
-  PB_NRA_Trade_Union_Councils:0 "Trade Union Councils"
-  PB_NRA_Self_Strengthening:0 "Embrace Self-Strengthening"
-  PB_NRA_Literacy_Campaign:0 "Mass Literacy Campaign"
-  PB_NRA_Self_Reliance:0 "Self-Reliance"
+  PB_NRA_Industrial_Development:0 "Cultivate Domestic Industry"
+  PB_NRA_Nationalist_Education:0 "A Nationalist Curriculum"
+  PB_NRA_Cult_of_Cai:0 "Venerate the New Founders"
+  PB_NRA_Socialist_Crackdown:0 "Crack Down on the Socialists"
+  PB_NRA_National_Militarism:0 "National Militarism"
 
-  PB_NRA_CHI_Cao_Kun_Republic:0 "A Dream Deferred"
-  PB_NRA_CHI_Republican_Crisis:0 "A Republic in Crisis"
-  PB_NRA_CHI_Enabling_Act:0 "A Chance Opportunity"
-  PB_NRA_CHI_Assemble_Junta:0 "Assemble the Junta"
-  PB_NRA_CHI_Cai_E_Successor:0 "Falsify the Founder's Last Will"
-  PB_NRA_CHI_Managed_Democracy:0 "Managed Democracy"
-  PB_NRA_CHI_New_Constitution:0 "A Federalist Constitution"
-  PB_NRA_CHI_In_Name_Only:0 "A Republic in Name Only"
-  PB_NRA_CHI_Business_Loyalty:0 "Cooperate with the Corporations"
-  PB_NRA_CHI_Han_Supremacy:0 "Sinicization"
-  PB_NRA_CHI_Nationalist_Republic:0 "The National Republic of China"
+  PB_NRA_Build_Hospitals:0 "Build Hospitals"
+  PB_NRA_Socialist_Democracy:0 "Socialism with a Human Face"
+  PB_NRA_Nationalization:0 "Nationalize Foreign Industries"
+  PB_NRA_Fight_Traditionalism:0 "Anti-Traditionalism"
+  PB_NRA_Quiet_Revolution:0 "A Quieter Kind of Revolution"
 
-  PB_NRA_Warlords_Begin:0 "The War of the Provinces"
-  PB_NRA_Retain_Democracy:0 "The Only Time for High Ideals"
-  PB_NRA_Suspend_Democracy:0 "No Time for High Ideals"
-  PB_NRA_Rally_the_Troops:0 "Rally the New Army"
-  PB_NRA_Retain_Legitimacy:0 "Retain Our Legitimacy"
-  PB_NRA_Seize_Land:0 "Seize Farmland"
-  PB_NRA_Peasant_Militias:0 "Peasant Militias"
-  PB_NRA_Outside_Support:0 "Bring in Foreign Advisors"
-  PB_NRA_Domestic_Firearms:0 "Establish Domestic Firearms Production"
-  PB_NRA_Cash_Crops:0 "Plant More Cash Crops"
-  PB_NRA_Strike_Manchuria:0 "The Northern Expedition"
-  PB_NRA_Strike_Hui:0 "The Western Expedition"
-  PB_NRA_Strike_Yunnan:0 "The Southwestern Expedition"
-  PB_NRA_Strike_Uyghur:0 "The Far West Expedition"
-  PB_NRA_China_Reunited:0 "China Reunited"
-  PB_NRA_China_Autonomous_Regions:0 "Establish Autonomous Regions"
-  PB_NRA_China_Forced_Reintegration:0 "Enforce Reintegration"
+  PB_NRA_Literacy_Campaign:0 "Literacy Campaigns"
+  PB_NRA_Enshrine_Personal_Freedoms:0 "Enshrine Personal Freedoms"
+  PB_NRA_Encourage_New_Culture:0 "New Culture Movement"
+  PB_NRA_Protections:0 "Constitutional Protections"
+  PB_NRA_Harmonious_Democracy:0 "Harmonious Democracy"
+
+  PB_NRA_Village_Communes:0 "Village Communes"
+  PB_NRA_Cultural_Revolution:0 "Chinese Bakuninism"
+  PB_NRA_Agriculute_Collectivization:0 "Agriculture Collectivization"
+  PB_NRA_Nationalize_Manchu_Assets:0 "Nationalize Manchu Assets"
+  PB_NRA_Revolution_by_Ballot:0 "Revolution by Ballot"
+
+  PB_NRA_Scramble_for_Power:0 "The Games Begin"
+  PB_NRA_Militarists_in_Control:0 "The Militarists in Control"
+  PB_NRA_Jacobins_in_Control:0 "The Second Revolution"
+  PB_NRA_Cao_Kun_Leader:0 "Generalissimo Cao Kun"
+  PB_NRA_Yan_Xishan_Leader:0 "Generalissimo Yan Xishan"
+
+  PB_NRA_Military_Centralism:0 "Military Constitution"
+  PB_NRA_White_Terror:0 "White Terror"
+  PB_NRA_Streamline_Intelligence:0 "Streamline the Intelligence Services"
+  PB_NRA_Split_Opposition:0 "Split the Opposition"
+  PB_NRA_Push_for_Industrialization:0 "Industrialization Push"
+  PB_NRA_Back_to_Work:0 "Get the People Back to Work"
+  PB_NRA_Modernize_Labour_Laws:0 "Modernize the Labour Laws"
+  PB_NRA_Compromise_with_the_Muslims:0 "Compromise with the Muslims"
+  PB_NRA_Unity_at_any_Cost:0 "Unity and Stability at Any Cost"
+
+  PB_NRA_Confucianism:0 "Confucian Guidance"
+  PB_NRA_Yan_Xishan_Thought:0 "Yan Xishan Thought"
+  PB_NRA_Heart_Washing:0 "Heart-Washing Societies"
+  PB_NRA_One_Party_State:0 "A Single Party State"
+  PB_NRA_Faith_in_Shangdi:0 "Faith in Shangdi"
+  PB_NRA_Militarism:0 "A Militant Population"
+  PB_NRA_Fight_Opium:0 "Fight the Opium Crisis"
+  PB_NRA_Republic_Youth:0 "Republican Youth Corps"
+  PB_NRA_New_Life:0 "New Life Movement"
 
   ##########################
   # TOOLTIPS
