--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -12,4 +12,6 @@
   PBNews.3.d:0 "Following extensive negotiations, the Crisis over Holland has come to a close. Despite diplomatic protests, the German delegation conceded the limited occupation of Flanders by French forces in an effort to appease French expansionism. This move proved pointless, however, and French forces simply opted to occupy the remainder of the Netherlands with minimal fighting.\n\nThe delicate concert of Europe, so carefully maintained since the end of the Great War, begins to crack under the pressures of revanchism."
   PBNews.3.a:0 "Bad Things are on the Horizon"
 
-  get_newspaper_side:0 "Seeking somebody to go back in time with me. This is not a joke. You'll get paid after we get back. Safety not guaranteed. I have only done this once before"
+  stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
+  stockcrisis.1.d:0 ""
+  stockcrisis.1.a:0 "Oh dear"
