--- a/localisation/PB_Britain_l_english.yml
+++ b/localisation/PB_Britain_l_english.yml
@@ -124,30 +124,26 @@
 
   PB_ENG_Kings_Agenda:0 "The King's Agenda"
   PB_ENG_Address_Parliament:0 "Address the Parliament"
-  PB_ENG_Georges_Legacy:0 "Reclaiming a Father's Legacy"
-  PB_ENG_Exploit_Indian_Divides:0 "Divide et Imperar"
-  PB_ENG_Orient_Jewel:0 "The Jewel of the Orient"
-  PB_ENG_Indian_Adjustment:0 "The East India Adjustment"
-  PB_ENG_Crusade_on_Barbarism:0 "Begin the Crusade"
-  PB_ENG_Raj_Restored:0 "Heaven's Light Our Guide"
-  PB_ENG_Final_Failure:0 "One Last Humiliation"
-
   PB_ENG_Ruled_Britannia:0 "Ruled Britannia"
-  PB_ENG_Parliament_Failure:0 "The Politicians have Failed Us"
-  PB_ENG_Privy_Council:0 "Assemble the Privy Council"
-  PB_ENG_Monarchonationalism:0 "Monarcho-Nationalism"
-  PB_ENG_Windsor_Restoration:0 "The Saxe-Coburg and Gotha Restoration"
-  PB_ENG_Cromwellian_Legacy:0 "Legacy of the Commonwealth"
-  PB_ENG_Declare_a_Republic:0 "No Kings, No Masters"
-  PB_ENG_Permanent_Martial_Law:0 "Perpetual State of Martial Law"
-  PB_ENG_It_Happened_Here:0 "It Happened Here"
-  PB_ENG_Military_Constitution:0 "A Military Constitution"
-  PB_ENG_England_Prevails:0 "England Prevails"
-  PB_ENG_Strength_through_Purity:0 "Strength through Purity"
-  PB_ENG_Purity_through_Strength:0 "Purity through Strength"
-  PB_ENG_Never_Again:0 "Never Again"
-  PB_ENG_Deal_with_Factionalism:0 "Deal with Factionalism"
-  PB_ENG_New_Republic:0 "Britons never shall be slaves"
+
+  PB_ENG_Chaos_in_India:0 "Chaos in India"
+  PB_ENG_Chaos_in_India_Propose_Expedition:0 "Propose the Churchill Expedition"
+  PB_ENG_Chaos_in_India_Arrest_Dissenters:0 "The East India Adjustment"
+  PB_ENG_Chaos_in_India_Stockpile_Munitions:0 "Stockpile Munitions"
+  PB_ENG_Chaos_in_India_Hire_Mercenaries:0 "Bring in Free Operators"
+  PB_ENG_Chaos_in_India_Strike_Into_India:0 "The Kosi River Incident"
+  PB_ENG_Chaos_in_India_Support_at_Home:0 "Support on the Homefront"
+  PB_ENG_Chaos_in_India_Counter_Insurgency:0 "Counter Insurgency Tactics"
+  PB_ENG_Chaos_in_India_Collective_Punishment:0 "Collective Punishment"
+  PB_ENG_Chaos_in_India_Denounce_Pacifists:0 "Denounce Pacifists as Cowards"
+  PB_ENG_Chaos_in_India_Appease_Muslims:0 "Appease the Muslims"
+  PB_ENG_Chaos_in_India_Appease_Hindus:0 "Concessions to the Hindus"
+  PB_ENG_Chaos_in_India_Reconcentration_Camps:0 "Introduce Reconcentration Camps"
+  PB_ENG_Chaos_in_India_Conscript_Indians:0 "Grab Locals Off the Streets"
+  PB_ENG_Chaos_in_India_Provisional_Raj:0 "Establish the Provisional Government"
+  PB_ENG_Chaos_in_India_Rations:0 "Only Collaborators Get Rations"
+  PB_ENG_Chaos_in_India_Victory:0 "Heaven's Light Our Guide"
+  PB_ENG_Chaos_in_India_Defeat:0 "Peace with Honour"
 
   PB_ENG_Emperor_Protects:0 "The Emperor Protects"
   PB_ENG_Personality_Cult:0 "A Portrait in Every Home"
@@ -268,6 +264,9 @@
   PB_ENG_Stock_Crisis_tooltip:0 "§YThe London Stock Crisis has occurred.§!"
   ENG_General_Election_Completed_tooltip:0 "§YThe General Election has been completed.§!"
   tooltip_ENG_weak_coalition:0 "§YThis coalition may be too weak to properly pass legislation!§!"
+  PB_ENG_Maratha_Collapse_tooltip:0 "§YThe Maratha Confederacy has Collapsed.§!"
+  PB_ENG_Victory_in_India_tooltip:0 "§YVictory has been achieved in India§!"
+  PB_ENG_Failure_in_India_tooltip:0 "§YBritain has lost the Anglo-Indian War§!"
 
   ##########################
   # IDEAS
