pushing this, as I'm resetting HOI4 due to a constant crash

--- a/localisation/PB_Italy_l_english.yml
+++ b/localisation/PB_Italy_l_english.yml
@@ -142,6 +142,13 @@ italy.37.a:0 "May the best party win"
 italy.38.t:0 "Roman Results"
 italy.38.d:0 "The results from the city of Rome are back. The victorious party in the region Roma is..."
 italy.38.a:0 ""
+italy.40.t:0 "1933 Italian Election"
+italy.40.d:0 "After several long campaigns from all big Italian parties, the electoral season has finally come to an end with the counting of the votes. While the vote counting has yet to be completed, many voices have already been sceptical of the results. While ANI supporters seem to belief in the inherent corruption of the electoral system, PSU supporters belief that the ANI has an unfair upperhand in the elections due to the same corruption. While tension slowly runs high, many hope that the results will be respected by all parties involved."
+italy.40.a:0 "The Unitary Socialist Party wins!"
+italy.40.b:0 "The Italian Liberal Party wins!"
+italy.40.c:0 "The Italian Popular Party wins!"
+italy.40.e:0 "The Nationalist Association of Italy wins!"
+
   ##########################
   # FOCUSSES
   ##########################
