--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -4594,6 +4594,31 @@ SAN_jc:0 "Sanghli State"
  MAL_cn_ADJ:0 "Malaysian"
  MAL_an_ADJ:0 "Malaysian"
 
+ COR_ni:0 "Kingdom of Corsica"
+ COR_ni_DEF:0 "Kingdom of Corsica"
+ COR_ds:0 "Kingdom of Corsica"
+ COR_ds_DEF:0 "Kingdom of Corsica"
+ COR_rc:0 "Kingdom of Corsica"
+ COR_rc_DEF:0 "Kingdom of Corsica"
+ COR_an:0 "Kingdom of Corsica"
+ COR_an_DEF:0 "Kingdom of Corsica"
+ COR_cn:0 "Kingdom of Corsica"
+ COR_cn_DEF:0 "Kingdom of Corsica"
+ COR_lb:0 "Kingdom of Corsica"
+ COR_lb_DEF:0 "Kingdom of Corsica"
+ COR_ss:0 "Kingdom of Corsica"
+ COR_ss_DEF:0 "Kingdom of Corsica"
+ COR_jc:0 "Kingdom of Corsica"
+ COR_jc_DEF:0 "Kingdom of Corsica"
+ COR_ni_ADJ:0 "Corsican"
+ COR_rc_ADJ:0 "Corsican"
+ COR_lb_ADJ:0 "Corsican"
+ COR_ss_ADJ:0 "Corsican"
+ COR_jc_ADJ:0 "Corsican"
+ COR_ds_ADJ:0 "Corsican"
+ COR_cn_ADJ:0 "Corsican"
+ COR_an_ADJ:0 "Corsican"
+
 ###################################
 # TEMPLATE
 ###################################
