--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -17,6 +17,7 @@
   PB_TUR_Caliph_of_Islam:0 "The Caliph of Islam"
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
   PB_TUR_Turkish_Civil_War:0 "The Turkish Civil War"
+  PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
 
   ##########################
   # EVENTS
@@ -50,6 +51,14 @@
   turkey.7.t:0 "The Brothers War Begins"
   turkey.7.d:0 ""
   turkey.7.a:0 "Let's finish this."
+
+  turkey.8.t:0 "The End of the Civil War"
+  turkey.8.d:0 ""
+  turkey.8.a:0 "Time to begin rebuilding"
+
+  turkey.9.t:0 "The End of the Civil War"
+  turkey.9.d:0 ""
+  turkey.9.a:0 "Time to begin rebuilding"
 
   ##########################
   # TOOLTIPS
