--- a/localisation/PB_factions_l_english.yml
+++ b/localisation/PB_factions_l_english.yml
@@ -13,4 +13,5 @@
   BER:0 "Imperial Powers"
   UAE:0 "United Arab Emirates"
   NOR:0 "Northern Defense Committee"
-  OTT_KURDS:0 "Ottoman United Front"
+  HEJ_FAC:0 "Hashemite Loyalists"
+  JBS_FAC:0 "Constitutional Alliance"
